Use new collection APIs